--- a/style.css
+++ b/style.css
@@ -56,12 +56,14 @@ body{
     background-color: #FFF;
     color: #000;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .botao--corrige{
     background-color: #F09046;
     color: #000;
     font-size: 15px;
+    font-weight: bold;
 }
 
 .botao--confirma{
@@ -70,6 +72,7 @@ body{
     font-size: 15px;
     width: 90px;
     height: 50px;
+    font-weight: bold;
 }
 
 .divisao-1{
